[tool.poetry]
name = "peddy-paper"
version = "0.1.0"
description = "This is a peddy paper for friends"
authors = ["filipedlferreira <filipedaniellferreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pandas = "^2.1.4"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
